# ur_control

./: Dockerfile  build_docker.bash  readme.md  run_docker.bash
docker/: build_ros_base.bash  build_ros_ur.bash  build_ros_ur_ws.bash  dockerfile_ros_ur_ws  run_ros_ur_ws.bash
dual_ur/dual_ur_description/: CMakeLists.txt  package.xml
dual_ur/dual_ur_description/model/: table.stl
dual_ur/dual_ur_description/urdf/: depthai_macro.urdf.xacro  robotiq_hande_gripper.urdf.xacro
dual_ur/dual_ur_gazebo/: package.xml
dual_ur/dual_ur_gazebo/launch/: dual_ur_gazebo.launch
dual_ur/dual_ur_gazebo/urdf/: dual_ur_gripper_hande.xacro  ur_gripper_hande.xacro  ur_macro.xacro
dual_ur/dual_ur_gazebo/worlds/: dual_robot.world
dual_ur/dual_ur_moveit_config/: .setup_assistant  package.xml
dual_ur/dual_ur_moveit_config/config/: dual_ur_controllers.yaml  joint_limits copy.yaml  joint_limits.yaml  ur_robot_gazebo.srdf
dual_ur/dual_ur_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  dual_ur_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  pilz_industrial_motion_planner_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  real_moveit.rviz  run_benchmark_ompl.launch  sim_dual_controllers.launch  start_dual_ur_moveit.launch  start_sim_dual_ur_moveit.launch  ur_robot_gazebo_moveit_controller_manager.launch.xml
dual_ur/dual_ur_robot/: CMakeLists.txt  package.xml  setup.py
dual_ur/dual_ur_robot/launch/: dual_robot_startup.launch  load_dual_description.launch  simu.launch  view_dual_robot.launch
dual_ur/dual_ur_robot/resources/: docker-compose.yml
dual_ur/dual_ur_robot/scripts/: docker_alice_bob.sh
dual_ur/dual_ur_robot/src/collision_object/: collision_object_publisher.cpp
dual_ur/dual_ur_robot/urdf/: dual_robot.xacro
robotiq/robotiq_description/urdf/: robotiq_hande_gripper.transmission.xacro
src/: readme.md
src/.devcontainer/: dockerfile_ros_base  dockerfile_ros_ur
src/dual_ur_description/urdf/: robotiq_hande_gripper.xacro
src/dual_ur_gazebo/: CMakeLists.txt
src/dual_ur_gazebo/launch/: dual_ur_gazebo.launch  ur5_gazebo.launch  ur5e_gazebo.launch
src/dual_ur_gazebo/launch/inc/: load_ur_gripper_hande.launch.xml
src/dual_ur_gazebo/urdf/: ur_gripper_hande.xacro
src/dual_ur_moveit_config/: package.xml
src/dual_ur_moveit_config/config/: ur_robot_gazebo.srdf
src/dual_ur_moveit_config/launch/: chomp_planning_pipeline.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ros_controllers.launch  sensor_manager.launch.xml  setup_assistant.launch  start_dual_ur_moveit.launch  start_sim_dual_ur_moveit.launch  trajectory_execution.launch.xml
src/dual_ur_robot/: .catkin_lint  CMakeLists.txt
src/dual_ur_robot/etc/: leftarm_controllers.yaml  rightarm_controllers.yaml  view_robot.rviz
src/robotiq/: README2.md
src/robotiq/robotiq_2f_gripper_control/launch/: robotiq_action_server.launch
src/robotiq/robotiq_description/urdf/: robotiq_hande_gripper.urdf.xacro
src/robotiq/robotiq_gazebo/src/: mimic_joint_plugin.cpp
src/ur_handler/: CMakeLists.txt  package.xml
src/ur_handler/config/: robot_calibration_ur5.yaml
src/ur_handler/launch/: simu_ur5e_bringup.launch  ur5_bringup.launch  ur5e_bringup.launch
universal_robot/ur5_moveit_config/config/: ur5.srdf
universal_robot/ur5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml
universal_robot/ur5e_moveit_config/config/: ur5e.srdf
universal_robot/ur5e_moveit_config/launch/: chomp_planning_pipeline.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml
ur_handler/config/rviz/: ur5.rviz
ur_handler/launch/: simu_ur5_bringup.launch  ur5_bringup.launch  ur5e_bringup.launch
ur_handler/scripts/: joint_list_printer.py  panda_handler.py  ur_handler.py
