<?xml version="1.0"?>
<package>
  <name>ur_handler</name>
  <version>0.1.0</version>
  <description>Contains the simulation environment and a code example to run the REMODEL uc1 test environment</description>

  <maintainer email="kevin.galassi2@unibo.it">Kevin Galassi</maintainer>
  <author email="kevin.galassi2@unibo.it">Kevin Galassi</author> 
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>ur_gazebo</run_depend>
  <run_depend>actionlib_msgs</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
      <gazebo_ros gazebo_model_path="${prefix}/models/"/>
  </export>
</package>
